--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <style>
 /* Стилі пиши тут :) */
 h1{
+    color:red
     text-aling: center;
 
 }
@@ -17,6 +18,8 @@ h1{
 <body>
     <h1>Світ пончиків</h1>
     <img src="/uploads/2023/02/donut.png" width="100px">
+    <p>Привіт з Logiki</p>
+    <p>Привіт з Logiki</p>
 
 </body>
-</html>
+
