--- a/index.html
+++ b/index.html
@@ -9,21 +9,23 @@
 <style>
 /* Стилі пиши тут :) */
 h1{
-    color:red
-    text-aling: center;
+    color:rgb(255, 0, 140);
+    text-align: center;
 
 }
 
 body{
-    text_align: center;
+    text-align: center;
 }
+
+
 
 </style>
 <body>
-    <h1>Світ пончиків</h1>
-    <img src="/uploads/2023/02/donut.png" width="100px">
-    <p>Привіт з Logiki</p>
-    <p>Привіт з Logiki</p>
+    <h1>Пончикови дощ</h1>
+    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSCCJyRYDqZMZT9sz7WDzRTNfhqYHUWb0NTDQ&s" width="100px">
+    <p>рецепт пончиків</p>
+    <p>у польській кухні кондитерський виріб у вигляді дріжджового тіста з пшеничного борошна, сформованого у вигляді злегка приплюснутої кулі, що поміщається на долоні, і смаженого у фритюрі (смальці, яловичому фритюжі, олії або церезії, раніше також на очищеному вершковому маслі) до темно-золотистого кольору.</p>
 
 </body>
 
